--- a/tourist-web/src/main/webapp/view/wap/index.html
+++ b/tourist-web/src/main/webapp/view/wap/index.html
@@ -80,7 +80,7 @@
                     <div class="weui_tabbar_icon"><img src="../../assets/img/jchg.png" alt=""></div>
                     <p class="weui_tabbar_label">精彩回顾</p>
                 </a>
-                <a href="buyerApply.html" class="weui_tabbar_item">
+                <a href="buyerApply.html" th:href="@{/wap/buyerApply}" class="weui_tabbar_item">
                     <div class="weui_tabbar_icon"><img src="../../assets/img/sqcg.png" alt=""></div>
                     <p class="weui_tabbar_label">申请采购权</p>
                 </a>
@@ -211,7 +211,7 @@
                 <p class="kimg dhshouyeicon"></p>
                 <p>首页</p>
             </a>
-            <a href="search.html" class="weui_navbar_item ">
+            <a href="search.html" th:href="@{/wap/search}" class="weui_navbar_item ">
                 <p class="kimg dhsousuoicon"></p>
                 <p>搜索</p>
             </a>
