--- a/tourist-web/src/main/webapp/view/wap/buyerApply.html
+++ b/tourist-web/src/main/webapp/view/wap/buyerApply.html
@@ -16,7 +16,8 @@
 </head>
 
 <body class="bac">
-<form action="submission.html" method="post" th:action="@{/wap/addTouristBuyer}" enctype="multipart/form-data">
+<form id="form1" action="msg.html" method="post" th:action="@{/wap/addTouristBuyer}"
+      enctype="multipart/form-data">
     <div class="weui_cells weui_cells_form">
         <div class="weui_cell">
             <div class="weui_cell_bd weui_cell_primary">
@@ -35,12 +36,12 @@
                 <input class="weui_input" type="tel" name="telPhone" placeholder="手机号">
             </div>
             <div class="weui_cell_ft">
-                <a href="javascript:;" class="weui_btn weui_btn_mini weui_btn_primary">获取验证码</a>
+                <span id="sendMsg" class="weui_btn weui_btn_mini weui_btn_primary">获取验证码</span>
             </div>
         </div>
         <div class="weui_cell">
             <div class="weui_cell_bd weui_cell_primary">
-                <input class="weui_input" type="tel" placeholder="请输入验证码">
+                <input class="weui_input" type="text" name="code" placeholder="请输入验证码">
             </div>
         </div>
         <div class="weui_cell">
@@ -135,10 +136,12 @@
 <script src="http://resali.huobanplus.com/cdn/jquery-weui/0.8.2/jquery-weui.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/jquery-weui/0.8.2/swiper.min.js"></script>
 <script th:inline="javascript">
+    var sendMsgUrl = /*[[@{/wap/sendMsg}]]*/ '../../mock/httpJson.json';
+    var vilaMsgUrl = /*[[@{/wap/sendMsg}]]*/ '../../mock/httpJson.json';
     $(function () {
+
         $("#businessLicencesUri").on('change', function (e) {
             var file = $(this)[0].files[0];
-            console.log(file)
             if (file) {
                 var reader = new FileReader();
                 reader.onload = function (evt) {
@@ -171,9 +174,43 @@
             }
         });
 
-        $("#addBuyer").click(function () {
-
+        $("#sendMsg").click(function () {
+            var phone = $("input[name='telPhone']").val();
+            if (phone != "") {
+                $.ajax({
+                    url: sendMsgUrl,
+                    method: "post",
+                    data: {phone: phone},
+                    dataType: "json",
+                    success: function (data) {
+                        $.alert("短信已发送,2分钟内有效")
+                    },
+                    error: function (error) {
+                        $.alert(error.msg)
+                    }
+                });
+            }
         });
+
+        $("#addBuyer").click(function () {
+            var phone = $("input[name='telPhone']").val();
+            var code = $("input[name='code']").val();
+            if (code != '') {
+                $.ajax({
+                    url: vilaMsgUrl,
+                    method: "post",
+                    data: {phone: phone, code: code},
+                    dataType: "json",
+                    success: function (data) {
+                        $("#form1").submit();
+                    },
+                    error: function (error) {
+                        $.alert(error.msg)
+                    }
+                });
+            }
+        });
+
     });
 </script>
 </body>
